# telabrium

./: .COPYING.txt.kate-swp  .directory  .gitignore  CMakeLists.txt  Hippo.code-workspace  LICENSE.txt  Makefile  Readme.md  Readme2.md  TODO.md  hippotest  luarium.code-workspace  meson.build  telabrium.code-workspace
include/: micropak.hpp
include/IL/: ilut.h
include/glad/: glad.h
include/hipponium/: camera.h  display.h  event.h  generic.h  level.h  light.h  luafile.h  main.h  mesh.h  model.h  object.h  shader.h
include/json/: json.h
include/luarium/: archiver.h  camera.h  collider.h  debug.h  display.h  event.h  generic.h  input.h  level.h  light.h  luafile.h  main.h  mesh.h  model.h  object.h  rigidbody example.c  shader.h  skybox.h  task.h  utility.h
include/luarium/core/: camera.h  debug.h  generic.h  level.h  light.h  luafile.h  main.h  mesh.h  model.h  shader.h
include/luarium/devices/: collider.h  rigidbody.h  skybox.h
include/telabrium/: camera.h  collider.h  config.h.in  demo.h  input.h  level.h  light.h  luafile.h  main.h  material.h  mesh.h  model.h  object.h  object3d.hpp  renderer.h  rigidbody.h  safe_val.h  shader.h  skybox.h  task.h  text.h  utility.h
include/telabrium/generic/: freecam.h
lib/: libarchive.so.16  libglfw.so.3.2
src/: CMakeLists.txt  archiver.cpp  camera.cpp  generic.cpp  glad.c  input.cpp  level.cpp  light.cpp  luafile.cpp  main.cpp  material.cpp  mesh.cpp  meson.build  model.cpp  object.cpp  object3d.cpp  renderer.cpp  safe_val.cpp  shader.cpp  skybox.cpp  task.cpp  utility.cpp
src/core/: debug.cpp  generic.cpp  luafile.cpp  mesh.cpp  model.cpp  object.cpp  shader.cpp
src/devices/: camera.cpp  debug.cpp  generic.cpp  light.cpp  luafile.cpp  mesh.cpp  model.cpp  object.cpp  shader.cpp  skybox.cpp
src/generic/: CMakeLists.txt  freecam.cpp  meson.build
subprojects/: jsoncpp.wrap  micropak.wrap
tests/: demo.cpp  greetr  meson.build  ts
tests/config/: config.json  dvorak
tests/include/: display.h  rigidbody.h  vulkan.h
tests/levels/test/: foo.json  index.json
tests/lua/: test.lua
tests/materials/: default.json  multi_example.json  skybox.json
tests/models/: floor.dae  green.dae  ice.dae  mattest.dae  mirror.dae  origin.blend  origin.dae  origin.fbx  origin.mtl  origin.stl  purpleball.mtl  shadertest.blend  shadertest.mtl  smooth.dae  test.dae  waa.dae  waacube.mtl  wood.dae  wood.mtl
tests/shaders/: Standard copy.frag  Standard.frag  Standard.fs  Standard.vert  Standard1.fs  gui.vs  skybox.frag  skybox.vert  unshaded.frag
tests/shaders/Standard/: Standard.frag  Standard.json
tests/src/: collider.cpp  level.cpp  luatest.cpp  rigidbody example.c  text.cpp
